[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LevelSelect/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://fonts/aileron/Aileron-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/LevelSelect/LevelSelectButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/LevelSelect/LevelSelectBackround.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1010.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1860.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1860.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 19.58
custom_constants/separation = 50

[node name="LevelSelectButton1" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="LevelSelectButton2" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 318.0
margin_top = 338.0
margin_right = 518.0
margin_bottom = 538.0
size_flags_horizontal = 2
size_flags_vertical = 4
level = "Level2"

[node name="LevelSelectButton3" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 670.0
margin_right = 870.0
margin_bottom = 200.0
size_flags_horizontal = 6
size_flags_vertical = 0
level = "Level3"

[node name="LevelSelectButton4" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 988.0
margin_top = 338.0
margin_right = 1188.0
margin_bottom = 538.0
size_flags_horizontal = 6
size_flags_vertical = 4
level = "Level4"

[node name="LevelSelectButton5" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1340.0
margin_right = 1540.0
margin_bottom = 200.0
size_flags_horizontal = 14
size_flags_vertical = 2
level = "Level5"

[node name="LevelSelectButton6" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1625.0
margin_top = 676.0
margin_right = 1825.0
margin_bottom = 876.0
size_flags_horizontal = 6
size_flags_vertical = 8
level = "Level4"

[node name="LevelConnectLine" type="Line2D" parent="."]
z_index = -1
default_color = Color( 0.462745, 0.0235294, 0.0235294, 1 )
texture_mode = 321413504

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 974.494, 536.664 )
z_index = -5
texture = ExtResource( 4 )
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton1" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton1" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton1" to="." method="_on_LevelSelectButton_start_level"]
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton2" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton2" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton2" to="." method="_on_LevelSelectButton_start_level"]
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton3" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton3" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton3" to="." method="_on_LevelSelectButton_start_level"]
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton4" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton4" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton4" to="." method="_on_LevelSelectButton_start_level"]
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton5" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton5" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton5" to="." method="_on_LevelSelectButton_start_level"]
[connection signal="hovered_over" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton6" to="." method="_on_LevelSelectButton_hovered_over"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton6" to="." method="_on_LevelSelectButton_mouse_exited"]
[connection signal="start_level" from="MarginContainer/VBoxContainer/HBoxContainer/LevelSelectButton6" to="." method="_on_LevelSelectButton_start_level"]
